# agentops

./: .gitignore  CHANGELOG.md  CLEANUP_COMPLETE.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETE_SUCCESS.md  DEPLOYMENT_READY.md  LAUNCH_CHECKLIST.md  LICENSE  MANIFEST.in  MONOREPO_COMPLETE.md  PHASE3_COMPLETE.md  PRODUCTION_DEPLOY_GUIDE.md  README.md  SDK_GUIDE.md  SOCIAL_POSTS.md  UPLOAD_NOW.md  e.nv.examples  pyproject.toml  requirements.txt  setup.py
.cursor/: scratchpad.md
agentops/: __init__.py  client.py  detector_flexible.py
agentops-api/: .gcloudignore  .gitignore  API_WORKING.md  AUTH_GUIDE.md  DEPLOY.md  Dockerfile  Dockerfile.full  Dockerfile.production  FIXES_APPLIED.md  FRONTEND_CONNECTION.md  GCP_DEPLOY.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  README.md  auth_main.py  cloudbuild.yaml  deploy-to-gcp.ps1  deploy-to-gcp.sh  deploy.sh  docker-compose.yml  env.yaml  main.py  minimal_main.py  requirements-minimal.txt  requirements.txt  test_auth_flow.sh  test_manual.md  test_powershell.ps1
agentops-api/app/: __init__.py
agentops-api/database/: schema.sql  schema_auth.sql  schema_minimal.sql
agentops-api/tests/: __init__.py  conftest.py  test_health.py
docs/: CLEANUP_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  LAUNCH_SUMMARY.md  PYPI_DESCRIPTION.md  PYPI_PUBLISH_GUIDE.md  README.md  RELEASE_v0.2.1.md
examples/: examples.py  wrap_agent.py
frontend/: .env.example  .env.production  .env.production.example  DEPLOYMENT.md  README.md  README_SETUP.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  (+1 more)
integration-tests/: README.md  RESULTS_SUMMARY.md  test_agent.py
test-folder/: README.md  test_production.py  verify_database.sql
tests/: test_detector.py  test_sdk.py
(+33 files in other folders)
